--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,9 @@
         </activity>
         <activity
             android:name=".ShapesActivity"
-            android:label="@string/title_activity_shapes"></activity>
+            android:label="@string/title_activity_shapes" />
+        <activity android:name=".FichaActivity" />
+        <activity android:name=".SeguimientoActivity"></activity>
     </application>
 
 </manifest>
