Añadiendo un map fragment activity con un info view personalizado, tambien un blank fragment solo contiene texto por defecto deberia remplazar el contenido, pero solo se añade a el. Nota: no olvidar añadir el fragment activity al manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,8 +51,9 @@
         <activity
             android:name=".ShapesActivity"
             android:label="@string/title_activity_shapes" />
+        <activity android:name=".MapFragmentActivity" />
         <activity android:name=".FichaActivity" />
-        <activity android:name=".SeguimientoActivity"></activity>
+        <activity android:name=".SeguimientoActivity" />
     </application>
 
 </manifest>
