se muestra en un activity de lista los tramos obtenidos por el json, y sus coordenadas, se logra implementar loader asynctask

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
         <activity android:name=".MapFragmentActivity" />
         <activity android:name=".FichaActivity" />
         <activity android:name=".SeguimientoActivity" />
+        <activity android:name=".TramoActivity" />
     </application>
 
 </manifest>
